# aula19_bootcamp_python

./: database.py  main.py  pyproject.toml
exemplos_fastapi/: mainv1.py
