[tool.poetry]
name = "aula19-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Gustavo Botelho Vieira <gu-botelho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
sqlalchemy = "^2.0.32"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
